bugfix(md-icon): fix alignment issues

--- a/src/platform/core/common/styles/font/_font.scss
+++ b/src/platform/core/common/styles/font/_font.scss
@@ -17,8 +17,8 @@ $md-font-url: './' !default;
   font-style: normal;
   font-size: 24px;  /* Preferred icon size */
   display: inline-block;
-  width: 1em;
-  height: 1em;
+  width: auto;
+  height: auto;
   line-height: 1;
   text-transform: none;
   letter-spacing: normal;
